[gd_scene load_steps=10 format=2]

[ext_resource path="res://Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fundos/Win_Menu/SS_RedWins_Fundo.png" type="Texture" id=2]
[ext_resource path="res://Ship - Copia.tscn" type="PackedScene" id=3]
[ext_resource path="res://Red_Wins.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3208.39, 97.8572 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.5358, 2056.07 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 50.7339
height = 1027.1

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 387.335, 571.458 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 723.214, 223.571 )

[node name="Red_Wins" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
centered = false

[node name="Areana Limits" type="StaticBody2D" parent="."]
position = Vector2( 181, 14 )
scale = Vector2( 0.14, 0.14 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 1914.29, -121.429 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 1914.29, 3578.57 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( -1250, 1807.14 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 5178.57, 1707.14 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 1971.43, 1385.71 )
rotation = 1.56878
shape = SubResource( 3 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 1977.76, 1778.1 )
rotation = 1.56878
shape = SubResource( 4 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Areana Limits"]
position = Vector2( 1991.07, 1940.71 )
shape = SubResource( 5 )

[node name="Ship" parent="." instance=ExtResource( 1 )]
position = Vector2( 775, 256 )

[node name="Ship 2" parent="." instance=ExtResource( 3 )]
position = Vector2( 135, 256 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="Unfreeze_1" from="." to="Ship" method="_on_Red_Wins_Unfreeze_1"]
[connection signal="Unfreeze_2" from="." to="Ship 2" method="_on_Red_Wins_Unfreeze_2"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
